--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <meta name="author" content="CV. Gusam Cipta Karya">
         <meta name="description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
         <meta name="keywords" content="CV. gusam cipta karya, CV. konstruksi baja, Jasa Konstruksi, konstruksi baja berat, baja ringan, ACP Aluminium Composite Panel, GRC Glassfiber Reinforced Concrete">
-        <!-- <meta name="google-site-verification" content="xxx" /> -->
+        <meta name="google-site-verification" content="N-nbT76b_Ki4X8udQ7R7GbOjPFnCWqAOOtWuI1EPepY" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@cv-gusam-cipta-karya" />
         <meta name="twitter:creator" content="@cv-gusam-cipta-karya" />
-        <!-- <meta property="og:url" content="xxx" /> -->
+        <meta property="og:url" content="https://cvgusamciptakarya.github.io" />
         <meta property="og:title" content="CV. Gusam Cipta Karya" />
         <meta property="og:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete)." />
-        <!-- <meta property="og:image" content="https://pemborongtrenggalek.github.io/assets/img/icon.png"/> -->
+        <meta property="og:image" content="https://pemborongtrenggalek.github.io/img/logo-cv-gusam-cipta-karya-hitam.png"/>
         <link rel="shortcut icon" href="img/logo-cv-gusam-cipta-karya-hitam.png" type="image/x-icon">
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
         <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css'>
