--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="title" content="CV. Gusam Cipta Karya">
         <meta name="author" content="CV. Gusam Cipta Karya">
         <meta name="description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
-        <meta name="keywords" content="CV. gusam cipta karya, CV. konstruksi baja, Jasa Konstruksi, konstruksi baja berat, baja ringan, ACP Aluminium Composite Panel, GRC Glassfiber Reinforced Concrete">
+        <meta name="keywords" content="cv gusam cipta karya, cv. gusam cipta karya, CV konstruksi baja makasar, Jasa Konstruksi, konstruksi baja berat, baja ringan, ACP Aluminium Composite Panel, GRC Glassfiber Reinforced Concrete">
         <meta name="google-site-verification" content="N-nbT76b_Ki4X8udQ7R7GbOjPFnCWqAOOtWuI1EPepY" />
         <meta name="twitter:card" content="summary" />
         <meta name="twitter:site" content="@cv-gusam-cipta-karya" />
