--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         <meta property="og:title" content="CV. Gusam Cipta Karya" />
         <meta property="og:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete)." />
         <meta property="og:image" content="https://pemborongtrenggalek.github.io/img/logo-cv-gusam-cipta-karya-hitam.png"/>
+        <link rel="canonical" href="https://cvgusamciptakarya.github.io/index.html" />
         <link rel="shortcut icon" href="img/logo-cv-gusam-cipta-karya-hitam.png" type="image/x-icon">
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
         <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css'>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        
+        <!--========== Kalau mau mengedit file web ini, paling tidak izin kepada pemiliknya. Atau bisa juga menghubungi saya selaku editor webnya di => 085 172 355 653 ==========-->
 
         <!--========== SCROLL TOP ==========-->
         <a href="#" class="scrolltop" id="scroll-top">
