--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
                 <div class="footer__content">
                     <h3 class="footer__title">Kontak</h3>
                     <ul>
-                        <li><a href="tel://6281916596923" class="footer__link"><i class='bx bxs-business'></i>081916596923</a></li>
-                        <li><a href="tel://6282114141665" class="footer__link"><i class='bx bx-phone-call'></i>082114141665</a></li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=6285343971977" class="footer__link"><i class='bx bxs-business'></i>085 343 971 977</a></li>
                         <li><a href="https://api.whatsapp.com/send/?phone=6282196687715" target="_blank" class="footer__link"><i class='bx bxl-whatsapp'></i>082196687715</a></li>
                         <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gusamciptakarya@gmail.com&su=Jasa%20Kontruksi" target="_blank" class="footer__link"><i class='bx bx-envelope'></i>@gusamciptakarya</a></li>
                     </ul>
