--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     <h3 class="footer__title">Kontak</h3>
                     <ul>
                         <li><a href="https://api.whatsapp.com/send/?phone=6285343971977" class="footer__link"><i class='bx bxs-business'></i>085 343 971 977</a></li>
-                        <li><a href="https://api.whatsapp.com/send/?phone=6282196687715" target="_blank" class="footer__link"><i class='bx bxl-whatsapp'></i>082196687715</a></li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=6282196687715" target="_blank" class="footer__link"><i class='bx bxl-whatsapp'></i>082 196 687 715</a></li>
                         <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=gusamciptakarya@gmail.com&su=Jasa%20Kontruksi" target="_blank" class="footer__link"><i class='bx bx-envelope'></i>@gusamciptakarya</a></li>
                     </ul>
                 </div>
