--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
     <head>
         <title>CV. Gusam Cipta Karya</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <meta name="google" content="notranslate">
         <meta name="robots" content="index,follow">
-        <meta name="revisit-after" content="1 days">
         <meta name="title" content="CV. Gusam Cipta Karya">
         <meta name="author" content="CV. Gusam Cipta Karya">
         <meta name="description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
         <meta name="keywords" content="cv gusam cipta karya, cv. gusam cipta karya, CV konstruksi baja makasar, Jasa Konstruksi, konstruksi baja berat, baja ringan, ACP Aluminium Composite Panel, GRC Glassfiber Reinforced Concrete">
         <meta name="google-site-verification" content="N-nbT76b_Ki4X8udQ7R7GbOjPFnCWqAOOtWuI1EPepY" />
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@cv-gusam-cipta-karya" />
-        <meta name="twitter:creator" content="@cv-gusam-cipta-karya" />
-        <meta property="og:url" content="https://cvgusamciptakarya.github.io" />
-        <meta property="og:title" content="CV. Gusam Cipta Karya" />
-        <meta property="og:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete)." />
-        <meta property="og:image" content="https://pemborongtrenggalek.github.io/img/logo-cv-gusam-cipta-karya-hitam.png"/>
-        <link rel="canonical" href="https://cvgusamciptakarya.github.io/index.html" />
-        <link rel="shortcut icon" href="img/logo-cv-gusam-cipta-karya-hitam.png" type="image/x-icon">
+        <!-- Open Graph Meta Tags -->
+        <meta property="og:url" content="https://cvgusamciptakarya.github.io">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="CV. Gusam Cipta Karya">
+        <meta property="og:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
+        <meta property="og:image" content="https://cvgusamciptakarya.github.io/img/logo-cv-gusam-cipta-karya-hitam.png">
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="cvgusamciptakarya.github.io">
+        <meta property="twitter:url" content="https://cvgusamciptakarya.github.io">
+        <meta name="twitter:title" content="CV. Gusam Cipta Karya">
+        <meta name="twitter:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
+        <meta name="twitter:image" content="https://cvgusamciptakarya.github.io/img/logo-cv-gusam-cipta-karya-hitam.png">
+        <!-- link rel -->
+        <link rel="canonical" href="https://cvgusamciptakarya.github.io" />
+        <link rel="shortcut icon" href="/img/logo-cv-gusam-cipta-karya-hitam.png" type="image/x-icon">
         <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
         <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css'>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
     <body>
         
@@ -38,8 +43,8 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav ">
-                <a href="index.html" class="nav__logo">
-                    <img src="img/logo-cv-gusam-cipta-karya-hijau.png" alt="logo CV. Gusam Cipta Karya">
+                <a href="/" class="nav__logo">
+                    <img src="/img/logo-cv-gusam-cipta-karya-hijau.png" alt="logo CV. Gusam Cipta Karya">
                 </a>
 
                 <div class="nav__menu" id="nav-menu">
@@ -68,7 +73,7 @@
                         <a href="#about" class="button">Selengkapnya</a>
                     </div>
                     <div class="home__img">
-                        <img src="img/konstruksi-baja.jpg" alt="konstruksi baja CV. Gusam Cipta Karya">
+                        <img src="/img/konstruksi-baja.jpg" alt="konstruksi baja CV. Gusam Cipta Karya">
                     </div>
                 </div>
             </section>
@@ -81,19 +86,19 @@
                 </div>
                 <div class="about__container">
                     <div>
-                        <img src="img/profil-1.png" alt="profil CV. Gusam Cipta Karya">
+                        <img src="/img/profil-1.png" alt="profil CV. Gusam Cipta Karya">
                     </div>
                     <p>CV. Gusam Cipta Karya, didirikan pada tanggal 6 November 2007 (oleh Gugum Syamsul Marip) adalah perusahaan yang bergerak di bidang konstruksi baja berat (fabrikasi dan ereksi). Kami berlokasi di Perumnas Antang No.211, Manggala, Kota Makassar, Sulawesi Selatan dan telah berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).</p>
                 </div>
                 <div class="about__container">
                     <p>Keunggulan kami meliputi: tim yang terdiri dari tenaga kerja ahli dan terampil di bidang konstruksi, dengan pengalaman, wawasan, dan pengetahuan yang luas dalam merancang, memproduksi, dan memasang konstruksi baja berat. Selain itu, kami juga menggunakan teknologi mutakhir dan peralatan yang canggih untuk membantu pengerjaan supaya lebih efisien, cepat, dan akurat.</p>
                     <div>
-                        <img src="img/profil-2.png" alt="profil CV. Gusam Cipta Karya">
+                        <img src="/img/profil-2.png" alt="profil CV. Gusam Cipta Karya">
                     </div>
                 </div>
                 <div class="about__container">
                     <div>
-                        <img src="img/profil-3.png" alt="profil CV. Gusam Cipta Karya">
+                        <img src="/img/profil-3.png" alt="profil CV. Gusam Cipta Karya">
                     </div>
                     <p>Kami berkomitmen untuk memberikan layanan konstruksi yang handal, dengan fokus pada kualitas, ketepatan waktu, dan kepuasan klien. Melalui pendekatan yang fleksibel dan kemampuan dalam memahami keinginan klien terhadap desain konstruksi, pemilihan warna, serta pemilihan material yang digunakan, kami siap mewujudkan mahakarya konstruksi impian Anda.</p>
                 </div>
@@ -133,28 +138,28 @@
                     <h2 class="section-title">Sesuaikan Kebutuhan Anda</h2>
                     <div class="paket__container">
                         <div class="paket__content">
-                            <img src="img/konstruksi-baja-berat.jpg" alt="konstruksi-baja-berat" class="paket__img">
+                            <img src="/img/konstruksi-baja-berat.jpg" alt="konstruksi-baja-berat" class="paket__img">
                             <h3 class="paket__name">Konstruksi <br>Baja Berat</h3>
                             <span class="paket__detail">Melayani perancangan, produksi, dan pemasangan konstruksi baja berat untuk berbagai jenis proyek, termasuk juga pembangunan pabrik, gudang, jembatan, gedung bertingkat, dan infastruktur lainnya.</span>
                             <span class="paket__preci">Konsultasi Sekarang!</span>
                             <a href="https://wa.me/6282196687715" target="_blank" class="button paket__button"><i class='bx bxs-chat'></i></a>
                         </div>
                         <div class="paket__content">
-                            <img src="img/kontraktor-baja-ringan.jpg" alt="kontraktor-baja-ringan" class="paket__img">
+                            <img src="/img/kontraktor-baja-ringan.jpg" alt="kontraktor-baja-ringan" class="paket__img">
                             <h3 class="paket__name">Konstruksi <br>Baja Ringan</h3>
                             <span class="paket__detail">Selain konstruksi baja berat, kami juga melayani konstruksi baja ringan. Baja ringan memiliki keunggulan, antara lain: proses pengerjaan lebih cepat, bobot lebih ringan, dan mudah dibentuk (customize).</span>
                             <span class="paket__preci">Konsultasi Sekarang!</span>
                             <a href="https://wa.me/6282196687715" target="_blank" class="button paket__button"><i class='bx bxs-chat'></i></a>
                         </div>
                         <div class="paket__content">
-                            <img src="img/acp-dan-grc.jpg" alt="acp-dan-grc" class="paket__img">
+                            <img src="/img/acp-dan-grc.jpg" alt="acp-dan-grc" class="paket__img">
                             <h3 class="paket__name">ACP <br>dan GRC</h3>
                             <span class="paket__detail">Kami melayani pemasangan ACP (Aluminium Composite Panel) dan GRC (Glassfiber Reinforced Concrete).. ACP dan GRC digunakan untuk fasad bangunan, dinding, dan elemen dekoratif lainnya.</span>
                             <span class="paket__preci">Konsultasi Sekarang!</span>
                             <a href="https://wa.me/6282196687715" target="_blank" class="button paket__button"><i class='bx bxs-chat'></i></a>
                         </div>
                         <div class="paket__content">
-                            <img src="img/konstruksi-rumahan.jpg" alt="konstruksi-rumahan" class="paket__img">
+                            <img src="/img/konstruksi-rumahan.jpg" alt="konstruksi-rumahan" class="paket__img">
                             <h3 class="paket__name">Konstruksi <br>Lainnya</h3>
                             <span class="paket__detail">Kami juga menyediakan layanan konstruksi lainnya, seperti pekerjaan pipa baja, pengelasan, sandblasting, pengecatan, perawatan konstruksi baja berat, dan lain sebagainya.</span>
                             <span class="paket__preci">Konsultasi Sekarang!</span>
@@ -171,31 +176,76 @@
                 <div class="swiper galeri-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-1.jpg" alt="railing tangga stainless">
+                            <img src="/img/galeri-1.jpg" alt="railing tangga stainless">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-2.jpg" alt="acp gedung tinggi">
+                            <img src="/img/galeri-2.jpg" alt="acp gedung tinggi">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-3.jpg" alt="rangka besi untuk menara">
+                            <img src="/img/galeri-3.jpg" alt="rangka besi untuk menara">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-4.jpg" alt="proyek rumah pribadi">
+                            <img src="/img/galeri-4.jpg" alt="proyek rumah pribadi">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-5.jpg" alt="proyek pembangunan masjid">
+                            <img src="/img/galeri-5.jpg" alt="proyek pembangunan masjid">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-6.jpg" alt="proyek pembangunan mall">
+                            <img src="/img/galeri-6.jpg" alt="proyek pembangunan mall">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-7.jpg" alt="rangka besi rak Kebutuhan rumah tangga">
+                            <img src="/img/galeri-7.jpg" alt="rangka besi rak Kebutuhan rumah tangga">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-8.jpg" alt="pengelasan besi baja skala besar">
+                            <img src="/img/galeri-8.jpg" alt="pengelasan besi baja skala besar">
                         </div>
                         <div class="swiper-slide slide">
-                            <img src="img/galeri-9.jpg" alt="proyek pembangunan taman bermain">
+                            <img src="/img/galeri-9.jpg" alt="proyek pembangunan taman bermain">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/alat-mesin-laser-cutting.jpg" alt="Manifold gas dengan selang merah dan biru di meja kerja, dengan truk di latar belakang.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/beton-dan-baja-kandang-ayam-broiler.jpg" alt="Struktur bangunan beton yang belum selesai di tengah padang rumput yang rimbun di bawah langit berawan.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/pemasangan-rangka-besi-baja-di-perkotaan.jpg" alt="Pekerja konstruksi pada balok baja rangka bangunan dengan latar langit biru.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/pengiriman-rangka-baja-berat.jpg" alt="Pekerja konstruksi pada balok baja rangka bangunan dengan latar langit biru.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/perakitan-rangka-baja-berat-.jpg" alt="Lokasi konstruksi dengan rangka baja yang belum lengkap dan material bangunan yang berserakan.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/pintu-besi-garasi-anti-karat.jpg" alt="Pintu ganda kuning besar dengan desain panel dalam suasana industri.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proses-pemasangan-rangka-atap-baja.jpg" alt="Pekerja di rangka logam dengan latar langit biru cerah.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proses-pengecoran-menara-masjid.jpg" alt="Sebuah menara telekomunikasi yang dikelilingi perancah luas dengan latar langit kelabu.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proyek-pembangunan-menara-pagoda.jpg" alt="Kuil bergaya pagoda bertingkat dengan fasad kuning dan hijau di bawah langit biru.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proyek-pembangunan-swalayan-perkotaan.jpg" alt="Bangunan modern dengan fasad merah dan kuning serta detail arsitektur Asia dengan latar langit biru.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proyek-pembuatan-cafe-keluarga.jpg" alt="Gerbang masuk suatu bangunan Indonesia dengan elemen arsitektur tradisional dan spanduk penyambutan.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proyek-pembuatan-masjid-klasik.jpg" alt="Gerbang masuk suatu bangunan Indonesia dengan elemen arsitektur tradisional dan spanduk penyambutan.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/proyek-pembuatan-menara-masjid.jpg" alt="Sebuah menara tinggi berwarna hijau dan putih dengan latar langit biru berawan.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/rangka-baja-ringan-balkon-rumah.jpg" alt="Rangka logam bangunan yang belum selesai dengan latar belakang langit dan pemandangan kota.">
+                        </div>
+                        <div class="swiper-slide slide">
+                            <img src="/img/rangka-besi-baja-di-pinggiran-kota.jpg" alt="Lokasi konstruksi dengan rangka baja dan bendera di depan gedung tinggi.">
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -221,7 +271,7 @@
         <footer class="footer section ">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="index.html" class="footer__logo">CV. Gusam Cipta Karya</a>
+                    <a href="/" class="footer__logo">CV. Gusam Cipta Karya</a>
                     <span class="footer__description">Wujudkan konstruksi sesuai keinginan Anda.</span>
                     <div>
                         <a href="https://www.facebook.com/photo/?fbid=111348544918436&set=a.111348558251768" target="_blank" class="footer__social"><i class='bx bxl-facebook'></i></a>
@@ -268,7 +318,7 @@
 
         <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
-        <script src="script.js"></script>
+        <script src="/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script>emailjs.init('user_MlvjpQMhEa7inh1KrX7kc')</script>
 </body>
