--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="CV. Gusam Cipta Karya">
         <meta property="og:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
-        <meta property="og:image" content="https://cvgusamciptakarya.github.io/img/logo-cv-gusam-cipta-karya-hitam.png">
+        <meta property="og:image" content="https://cvgusamciptakarya.github.io/img/poster-cv-gusam-cipta-karya.jpg">
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
         <meta property="twitter:domain" content="cvgusamciptakarya.github.io">
         <meta property="twitter:url" content="https://cvgusamciptakarya.github.io">
         <meta name="twitter:title" content="CV. Gusam Cipta Karya">
         <meta name="twitter:description" content="berpengalaman dalam menangani pengerjaan konstruksi baja berat, baja ringan, ACP (Aluminium Composite Panel), dan GRC (Glassfiber Reinforced Concrete).">
-        <meta name="twitter:image" content="https://cvgusamciptakarya.github.io/img/logo-cv-gusam-cipta-karya-hitam.png">
+        <meta name="twitter:image" content="https://cvgusamciptakarya.github.io/img/poster-cv-gusam-cipta-karya.jpg">
         <!-- link rel -->
         <link rel="canonical" href="https://cvgusamciptakarya.github.io" />
         <link rel="shortcut icon" href="/img/logo-cv-gusam-cipta-karya-hitam.png" type="image/x-icon">
