--- a/index.html
+++ b/index.html
@@ -321,5 +321,17 @@
         <script src="/script.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script>emailjs.init('user_MlvjpQMhEa7inh1KrX7kc')</script>
+
+        <div class="black"></div>
+        <style>
+            .black{
+                position: fixed;
+                widows: 100vw;
+                height: 100vh;
+                background: #000;
+                z-index: 999;
+            }
+        </style>
+
 </body>
 </html>
