--- a/index.html
+++ b/index.html
@@ -326,7 +326,9 @@
         <style>
             .black{
                 position: fixed;
-                widows: 100vw;
+                left: 0;
+                top: 0;
+                width: 100vw;
                 height: 100vh;
                 background: #000;
                 z-index: 999;
